# Content-based-Image-Retrival

./: CMakeLists.txt  ReadMe.Md  baselineMatching_program2.cpp  customImageRetrival.cpp  extensionFace.cpp  extractFeatures_program1.cpp  faceDetect.h  faceDetect_greybg.cpp  featureMatching_usingResNet18 1.cpp  histogramMatching.cpp  kmeans.cpp  multiHistogram1.cpp  multiHistogram2.cpp  textureColor1.cpp  textureColor2.cpp
